; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_sqllog.c_sqllogTraceDb.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_sqllog.c_sqllogTraceDb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@sqllogglobal = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SQLLOG_NAMESZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"main\00", align 1
@SQLITE_OK = common dso_local global i32 0, align 4
@SQLITE_IOERR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [51 x i8] c"sqllogTraceDb(): database name too long (%d bytes)\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"-sqllog\00", align 1
@F_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @sqllogTraceDb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sqllogTraceDb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 1, i32* %3, align 4
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sqllogglobal, i32 0, i32 0), align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %43

10:                                               ; preds = %1
  %11 = load i32, i32* @SQLLOG_NAMESZ, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %4, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %5, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @sqllogFindAttached(i32* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 0, i8* %14)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @SQLITE_OK, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %41

20:                                               ; preds = %10
  %21 = call i32 @strlen(i8* %14)
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* @SQLLOG_NAMESZ, align 4
  %23 = load i32, i32* %7, align 4
  %24 = sub nsw i32 %22, %23
  %25 = icmp slt i32 %24, 8
  br i1 %25, label %26, label %30

26:                                               ; preds = %20
  %27 = load i32, i32* @SQLITE_IOERR, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @sqlite3_log(i32 %27, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i32 %28)
  store i32 0, i32* %3, align 4
  br label %40

30:                                               ; preds = %20
  %31 = load i32, i32* %7, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i8, i8* %14, i64 %32
  %34 = call i32 @memcpy(i8* %33, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i32 8)
  %35 = load i32, i32* @F_OK, align 4
  %36 = call i32 @access(i8* %14, i32 %35)
  %37 = icmp ne i32 %36, 0
  %38 = xor i1 %37, true
  %39 = zext i1 %38 to i32
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %30, %26
  br label %41

41:                                               ; preds = %40, %10
  %42 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %42)
  br label %43

43:                                               ; preds = %41, %1
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @sqllogFindAttached(i32*, i8*, i32, i8*) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @sqlite3_log(i32, i8*, i32) #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i32 @access(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
